<resources>
    <string name="app_name">CNote</string>
    <string name="action_settings">Settings</string>

    <string name="note">云笔记 </string>
    <string name="setting">设置</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">笔记</string>
    <string name="set">设置</string>
    <string name="title_tips">点击输入标题</string>
    <string name="account_tips">账号 :</string>
    <string name="password_tips">密码 :</string>
    <string name="login">登陆</string>
    <string name="reg">注册</string>
    <string name="login_tips">登陆到云笔记</string>
    <string name="reg_tips">用户注册</string>
    <string name="back">返回</string>
</resources>
